# BlackMagicOpenCV

./: .gitignore  BlackMagicOpenCV.cpp  BlackMagicOpenCV.h  CMakeLists.txt  DeckLinkInputDevice.cpp  DeckLinkInputDevice.h  DeviceManager.h  LICENSE  README.md  build.bat  com_ptr.h  platform.h  run.bat
